--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <h1 id="hello">Hello, World!</h1>
+
+    <script src="index.js"></script>
   </body>
 </html>
