--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   </head>
   <body>
-    <h1 id="hello">Hello, World!</h1>
+    <h1 id="counter">0</h1>
 
     <script src="index.js"></script>
   </body>
