--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   </head>
   <body>
-    <h1 id="counter">0</h1>
+    <div id="counter_space">
+      <h1 id="counter">0</h1>
+    </div>
 
     <script src="index.js"></script>
   </body>
