--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
@@ -11,6 +12,9 @@
       <h1 id="counter">0</h1>
     </div>
 
+    <script src="node_modules/jquery/dist/jquery.js"></script>
+    <script src="node_modules/popper.js/dist/popper.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
