--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div id="counter_space">
+    <div id="counter_space" class="container-fluid">
       <h1 id="counter">0</h1>
     </div>
 
