--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -8,8 +8,22 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div id="counter_space" class="container-fluid">
-      <h1 id="counter">0</h1>
+    <div id="app_space" class="container-fluid text-center">
+      <div>
+        <div id="counter_space" class="row">
+          <div class="col">
+              <h1 id="counter">0</h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <button type="button" class="btn btn-primary">Primary</button>
+          </div>
+          <div class="col">
+            <button type="button" class="btn btn-secondary">Secondary</button>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="node_modules/jquery/dist/jquery.js"></script>
