--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -12,7 +12,7 @@
       <div>
         <div id="counter_space" class="row">
           <div class="col">
-              <h1 id="counter">0</h1>
+              <span id="counter">0</span>
           </div>
         </div>
         <div class="row">
