--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -20,7 +20,7 @@
             <button type="button" class="btn btn-primary">Primary</button>
           </div>
           <div class="col">
-            <button type="button" class="btn btn-secondary">Secondary</button>
+            <button id="reset_button" type="button" class="btn btn-secondary">Secondary</button>
           </div>
         </div>
       </div>
