changed FAP icon to "refresh"

--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -60,7 +60,7 @@
     <button id="reset_button" class="mdc-fab material-icons app-fab--absolute" 
       aria-label="Favorite" 
       data-mdc-auto-init="MDCRipple">
-      <span class="mdc-fab__icon">favorite</span>
+      <span class="mdc-fab__icon">refresh</span>
     </button>
     <script src="node_modules/material-components-web/dist/material-components-web.js"></script>
     <script>mdc.autoInit()</script>
