--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -13,7 +13,7 @@
       <div class="mdc-toolbar__row">
         <section class="mdc-toolbar__section mdc-toolbar__section--align-start">
           <button class="demo-menu material-icons mdc-toolbar__icon--menu">menu</button>
-          <span class="mdc-toolbar__title catalog-title">Temporary Drawer</span>
+          <span class="mdc-toolbar__title catalog-title">Push Ups</span>
         </section>
       </div>
     </div>
@@ -21,34 +21,34 @@
       <nav class="mdc-temporary-drawer__drawer">
         <header class="mdc-temporary-drawer__header">
           <div class="mdc-temporary-drawer__header-content mdc-theme--primary-bg mdc-theme--text-primary-on-primary">
-            Header here
+            Push Ups
           </div>
         </header>
         <nav class="mdc-temporary-drawer__content mdc-list-group">
           <div id="icon-with-text-demo" class="mdc-list">
             <a class="mdc-list-item mdc-temporary-drawer--selected" href="#">
-              <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">inbox</i>Inbox
+              <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">home</i>Home
             </a>
             <a class="mdc-list-item" href="#">
-              <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">star</i>Star
+              <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">send</i>Freestyle
             </a>
             <a class="mdc-list-item" href="#">
-              <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">send</i>Sent Mail
-            </a>
-            <a class="mdc-list-item" href="#">
-              <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">drafts</i>Drafts
+              <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">event_note</i>Training Plan
             </a>
           </div>
           <hr class="mdc-list-divider">
           <div class="mdc-list">
             <a class="mdc-list-item" href="#">
-              <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">email</i>All Mail
+              <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">stars</i>Badges
             </a>
             <a class="mdc-list-item" href="#">
-              <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">delete</i>Trash
+              <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">trending_up</i>Analytics
             </a>
             <a class="mdc-list-item" href="#">
-              <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">report</i>Spam
+              <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">history</i>History
+            </a>
+            <a class="mdc-list-item" href="#">
+              <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">settings</i>Settings
             </a>
           </div>
         </nav>
