removed aria-label attributes

--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -27,28 +27,28 @@
         <nav class="mdc-temporary-drawer__content mdc-list-group">
           <div id="icon-with-text-demo" class="mdc-list">
             <a class="mdc-list-item mdc-temporary-drawer--selected" href="#">
-              <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">home</i>Home
+              <i class="material-icons mdc-list-item__start-detail">home</i>Home
             </a>
             <a class="mdc-list-item" href="#">
-              <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">send</i>Freestyle
+              <i class="material-icons mdc-list-item__start-detail">send</i>Freestyle
             </a>
             <a class="mdc-list-item" href="#">
-              <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">event_note</i>Training Plan
+              <i class="material-icons mdc-list-item__start-detail">event_note</i>Training Plan
             </a>
           </div>
           <hr class="mdc-list-divider">
           <div class="mdc-list">
             <a class="mdc-list-item" href="#">
-              <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">stars</i>Badges
+              <i class="material-icons mdc-list-item__start-detail">stars</i>Badges
             </a>
             <a class="mdc-list-item" href="#">
-              <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">trending_up</i>Analytics
+              <i class="material-icons mdc-list-item__start-detail">trending_up</i>Analytics
             </a>
             <a class="mdc-list-item" href="#">
-              <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">history</i>History
+              <i class="material-icons mdc-list-item__start-detail">history</i>History
             </a>
             <a class="mdc-list-item" href="#">
-              <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">settings</i>Settings
+              <i class="material-icons mdc-list-item__start-detail">settings</i>Settings
             </a>
           </div>
         </nav>
@@ -58,7 +58,6 @@
       <span id="counter">0</span>
     </main>
     <button id="reset_button" class="mdc-fab material-icons app-fab--absolute" 
-      aria-label="Favorite" 
       data-mdc-auto-init="MDCRipple">
       <span class="mdc-fab__icon">refresh</span>
     </button>
