added counter_space div back

--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -55,7 +55,9 @@
       </nav>
     </aside>
     <main id="app_main" class="app-main mdc-toolbar-fixed-adjust">
-      <span id="counter">0</span>
+      <div id="counter_space">
+        <span id="counter">0</span>
+      </div>
     </main>
     <button id="reset_button" class="mdc-fab material-icons app-fab--absolute" 
       data-mdc-auto-init="MDCRipple">
