only show the counter when "freestyle" is selected

--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -29,7 +29,7 @@
             <a class="mdc-list-item mdc-temporary-drawer--selected" href="#">
               <i class="material-icons mdc-list-item__start-detail">home</i>Home
             </a>
-            <a class="mdc-list-item" href="#">
+            <a id="freestyle" class="mdc-list-item" href="#">
               <i class="material-icons mdc-list-item__start-detail">send</i>Freestyle
             </a>
             <a class="mdc-list-item" href="#">
@@ -55,9 +55,6 @@
       </nav>
     </aside>
     <main id="app_main" class="app-main mdc-toolbar-fixed-adjust">
-      <div id="counter_space">
-        <span id="counter">0</span>
-      </div>
     </main>
     <button id="reset_button" class="mdc-fab material-icons app-fab--absolute" 
       data-mdc-auto-init="MDCRipple">
