added primative HomeActivity

--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -26,7 +26,7 @@
         </header>
         <nav class="mdc-temporary-drawer__content mdc-list-group">
           <div id="icon-with-text-demo" class="mdc-list">
-            <a class="mdc-list-item mdc-temporary-drawer--selected" href="#">
+            <a id="home" class="mdc-list-item mdc-temporary-drawer--selected" href="#">
               <i class="material-icons mdc-list-item__start-detail">home</i>Home
             </a>
             <a id="freestyle" class="mdc-list-item" href="#">
