--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="node_modules/material-design-icons/iconfont/material-icons.css">
     <link rel="stylesheet" href="styles.css">
   </head>
-  <body class="app_body">
+  <body id="app_body" class="app-body">
     <div class="mdc-toolbar mdc-toolbar--fixed">
       <div class="mdc-toolbar__row">
         <section class="mdc-toolbar__section mdc-toolbar__section--align-start">
@@ -54,12 +54,7 @@
         </nav>
       </nav>
     </aside>
-    <main id="app_main" class="app-main mdc-toolbar-fixed-adjust">
-    </main>
-    <button id="reset_button" class="mdc-fab material-icons app-fab--absolute" 
-      data-mdc-auto-init="MDCRipple">
-      <span class="mdc-fab__icon">refresh</span>
-    </button>
+    <main id="app_main" class="app-main mdc-toolbar-fixed-adjust"></main>
     <script src="node_modules/material-components-web/dist/material-components-web.js"></script>
     <script>mdc.autoInit()</script>
     <script src="index.js"></script>
