Workout Plans now navigates to new activity which shows available workouts

--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -34,7 +34,7 @@
             <a id="freestyle" class="mdc-list-item" href="#">
               <i class="material-icons mdc-list-item__start-detail">send</i>Freestyle
             </a>
-            <a class="mdc-list-item" href="#">
+            <a id="training_plans" class="mdc-list-item" href="#">
               <i class="material-icons mdc-list-item__start-detail">event_note</i>Training Plan
             </a>
           </div>
