add timer action to action bar when workout plan is started

--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -14,8 +14,10 @@
     <div class="mdc-toolbar mdc-toolbar--fixed">
       <div class="mdc-toolbar__row">
         <section class="mdc-toolbar__section mdc-toolbar__section--align-start">
-          <button class="demo-menu material-icons mdc-toolbar__icon--menu">menu</button>
+          <button class="material-icons mdc-toolbar__icon--menu demo-menu">menu</button>
           <span class="mdc-toolbar__title catalog-title">Push Ups</span>
+        </section>
+        <section id="actions" class="mdc-toolbar__section mdc-toolbar__section--align-end">
         </section>
       </div>
     </div>
